--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#9C27B0</color>
     <color name="colorPrimaryDark">#7b1fa2</color>
     <color name="colorAccent">#7C4DFF</color>
-    <color name="background">#FFFFFF</color>
+    <color name="background">#ffffff</color>
     <color name="red">#F44336</color>
     <color name="yellow">#FFEB3B</color>
     <color name="green">#4CAF50</color>
